# rectangular_promotion

./: Cargo.toml  README.md  rustfmt.toml  smc_build.sh
src/: full_deref.rs  into_iter.rs  lattice_word.rs  lattice_words.rs  lib.rs  owned_slice.rs  pairs.rs  python.rs
